# rust-contracts-stylus

./: .gitignore  .lia.cache  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GUIDELINES.md  README.md  SECURITY.md  clippy.toml  codecov.yml  lcov.info  lcov.infos  netlify.toml  rust-toolchain.toml  rustc-ice-2025-03-17T18_18_03-30831.txt  rustc-ice-2025-03-17T18_18_46-31026.txt  rustc-ice-2025-03-17T18_19_14-31106.txt  rustc-ice-2025-03-17T18_20_20-31194.txt  rustc-ice-2025-03-17T18_20_41-31256.txt  rustc-ice-2025-03-17T18_20_57-31410.txt  rustc-ice-2025-03-17T18_43_01-32272.txt  rustc-ice-2025-03-17T18_43_09-32805.txt  rustc-ice-2025-03-17T18_44_15-33178.txt  rustc-ice-2025-03-17T18_44_28-33928.txt  rustfmt.toml
.cargo/: config  (+1 more)
benches/: Cargo.toml
benches/src/: PoseidonT3.sol  PoseidonT3_asm.sol  access_control.rs  ark_ff.rs  eddsa.rs  erc1155.rs  erc1155_metadata_uri.rs  erc1155_supply.rs  erc20.rs  erc20_flash_mint.rs  erc4626.rs  erc6909.rs  erc6909_supply.rs  erc721.rs  lib.rs  main.rs  merkle_proofs.rs  ownable.rs  oz_crypto.rs  pedersen.rs  poseidon.rs  poseidon_asm_sol.rs  poseidon_renegades.rs  poseidon_sol.rs  report.rs  vesting_wallet.rs
contracts/: Cargo.toml  README.md
contracts-proc/: Cargo.toml  README.md
contracts-proc/src/: derive_virtual.rs  interface.rs  interface_id.rs  lib.rs  virtual.rs
contracts/crypto/: Cargo.toml
contracts/crypto/src/: lib.rs  main.rs  merkle_proof.rs
contracts/src/: arithmetic.rs  lib.rs  test_utils.rs  utils.rs
contracts/src/access/: access_control.rs  control.rs  enumerable.rs  mod.rs  ownable.rs  ownable_two_step.rs
contracts/src/cryptography/: eip712.rs  message_hash_utils.rs  mod.rs
contracts/src/erc20/: ierc20.rs  mod.rs
contracts/src/erc721/: mod.rs
contracts/src/finance/: mod.rs  vesting_wallet.rs
contracts/src/flashloan/: borrower.rs  lender.rs  mod.rs
contracts/src/governance/: mod.rs
contracts/src/proxy/: abi.rs  interfaces.rs  mod.rs
contracts/src/token/: mod.rs
contracts/src/uniswap/: mod.rs
contracts/src/utils/: account.rs  address.rs  capped.rs  context.rs  math.rs  metadata.rs  mod.rs  nonces.rs  pausable.rs  precompiles.rs  reentrant_call_handler.rs  storage_slot.rs
contracts/test-utils/: Cargo.toml
contracts/test-utils/src/: lib.rs
contracts/token/: Cargo.toml  README.md
contracts/token/erc20/: Cargo.toml
contracts/token/src/: lib.rs  main.rs
e2e-tests/: Cargo.toml  README.md  build.rs  run.sh  test.sh
e2e-tests/src/: context.rs  deploy.rs  erc20.rs  erc721.rs  error.rs  lib.rs
e2e-tests/src/abi/: erc20.rs  erc721.rs  mod.rs
e2e-tests/src/context/: erc20.rs  erc721.rs  mod.rs
e2e-tests/src/infrastructure/: erc20.rs  erc721.rs  mod.rs
erc20-proc/: Cargo.toml
erc20-proc/src/: lib.rs
examples/access-control/: Cargo.toml
examples/access-control-enumerable/: Cargo.toml
examples/access-control-enumerable/src/: constructor.sol  lib.rs
examples/access-control-enumerable/tests/: access_control_enumerable.rs
examples/access-control/src/: constructor.sol  lib.rs  main.rs
examples/access-control/tests/: abi.rs  access_control.rs
examples/cryptography/: Cargo.toml
examples/cryptography/src/: constructor.sol  lib.rs
examples/cryptography/tests/: cryptography.rs
examples/ecdsa/: Cargo.toml
examples/ecdsa/src/: constructor.sol  lib.rs  main.rs
examples/ecdsa/tests/: ecdsa.rs
examples/erc1155/: Cargo.toml
examples/erc1155-metadata-uri/: Cargo.toml
examples/erc1155-metadata-uri/src/: constructor.sol  lib.rs  main.rs
examples/erc1155-metadata-uri/tests/: erc1155-metadata-uri.rs  erc1155.rs
examples/erc1155-receiver-mock/: Cargo.toml
examples/erc1155-receiver-mock/src/: lib.rs  main.rs
examples/erc1155-receiver-mock/tests/: erc1155-receiver-mock.rs
examples/erc1155-supply/: Cargo.toml
examples/erc1155-supply/src/: constructor.sol  lib.rs  main.rs
examples/erc1155-supply/tests/: erc1155-supply.rs
examples/erc1155/src/: ERC1155ReceiverMock.sol  constructor.sol  lib.rs  main.rs
examples/erc1155/tests/: erc1155.rs
examples/erc1363/: Cargo.toml
examples/erc1967/: Cargo.toml
examples/erc1967/src/: lib.rs  main.rs
examples/erc1967/tests/: erc1967.rs
examples/erc20/: Cargo.toml
examples/erc20-burnable/: Cargo.toml
examples/erc20-burnable/src/: lib.rs
examples/erc20-flash-mint/: Cargo.toml
examples/erc20-flash-mint/src/: ERC3156FlashBorrowerMock.sol  constructor.sol  lib.rs  main.rs
examples/erc20-flash-mint/tests/: erc20-flash-mint.rs  erc20_flash_mint.rs
examples/erc20-permit/: Cargo.toml
examples/erc20-permit/src/: constructor.sol  lib.rs  main.rs
examples/erc20-permit/tests/: erc20_permit.rs  erc20permit.rs
examples/erc20-wrapper/: Cargo.toml
examples/erc20-wrapper/src/: constructor.sol  lib.rs  main.rs
examples/erc20-wrapper/tests/: erc20_wrapper.rs  erc20wrapper.rs
examples/erc20/src/: constructor.sol  lib.rs  main.rs
examples/erc20/tests/: abi.rs  erc20.rs  main.rs
examples/erc721/: Cargo.toml
examples/erc721-consecutive/: Cargo.toml
examples/erc721-consecutive/src/: constructor.sol  lib.rs  main.rs
examples/erc721-consecutive/tests/: abi.rs  erc721-consecutive.rs  erc721.rs  erc721_consecutive.rs
examples/erc721-holder/: Cargo.toml
examples/erc721-holder/src/: lib.rs  main.rs
examples/erc721-holder/tests/: erc721-holder.rs
examples/erc721-metadata/: Cargo.toml
examples/erc721-metadata/src/: constructor.sol  lib.rs  main.rs
examples/erc721-metadata/tests/: abi.rs  erc721.rs  erc721_metadata.rs
examples/erc721/src/: ERC721ReceiverMock.sol  constructor.sol  lib.rs  main.rs
examples/merkle-proofs/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: diff_merkle_verify.rs  ecdsa_recover.rs  keccak.rs  merkle.rs  merkle_differential_test.rs  merkle_verify.rs  openzeppelin_crypto.rs  openzeppelin_stylus_utils.rs
fuzz/in/: seed1
fuzz/src/: fuzz_target_1.rs  lib.rs  to_typed_data_hash.rs
integration/: Cargo.toml  README.md  test.sh
integration/src/: erc20.rs  erc721.rs  infrastructure.rs  lib.rs  utils.rs
proc-tests/: Cargo.toml
proc-tests/src/: lib.rs
(+635 files in other folders)
