[workspace]
members = [
  "contracts",
  "contracts-proc",
  "lib/crypto",
  "lib/e2e",
  "lib/e2e-proc",
  "examples/erc20",
  "examples/erc20-permit",
  "examples/erc20-flash-mint",
  "examples/erc721",
  "examples/erc721-consecutive",
  "examples/erc721-metadata",
  "examples/erc1155",
  "examples/erc1155-metadata-uri",
  "examples/erc1155-supply",
  "examples/erc4626",
  "examples/merkle-proofs",
  "examples/ownable",
  "examples/vesting-wallet",
  "examples/access-control",
  "examples/basic/token",
  "examples/basic/script",
  "examples/ecdsa",
  "examples/ownable-two-step",
  "examples/safe-erc20",
  "benches",
  "examples/poseidon",
]
default-members = [
  "contracts",
  "contracts-proc",
  "lib/crypto",
  "lib/e2e-proc",
  "examples/erc20",
  "examples/erc20-permit",
  "examples/erc20-flash-mint",
  "examples/erc721",
  "examples/erc721-consecutive",
  "examples/erc721-metadata",
  "examples/erc1155",
  "examples/erc1155-metadata-uri",
  "examples/erc1155-supply",
  "examples/erc4626",
  "examples/safe-erc20",
  "examples/merkle-proofs",
  "examples/ownable",
  "examples/vesting-wallet",
  "examples/ownable-two-step",
  "examples/access-control",
  "examples/basic/token",
  "examples/ecdsa",
  "examples/poseidon",
]
exclude = ["fuzz"]

# Explicitly set the resolver to version 2, which is the default for packages
# with edition >= 2021.
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.package]
authors = ["OpenZeppelin"]
edition = "2021"
license = "MIT"
repository = "https://github.com/OpenZeppelin/rust-contracts-stylus"
version = "0.2.0-alpha.3"

[workspace.lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
rust_2021_compatibility = { level = "warn", priority = -1 }
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[workspace.lints.clippy]
pedantic = "warn"
all = "warn"

[workspace.dependencies]
# Stylus SDK related
stylus-sdk = { version = "0.7.0", default-features = false, features = [
  "mini-alloc",
] }

alloy = { version = "=0.7.3", features = [
  "contract",
  "network",
  "providers",
  "provider-http",
  "rpc-client",
  "rpc-types-eth",
  "signer-local",
  "getrandom",
] }
# Even though `alloy` includes `alloy-primitives` and `alloy-sol-types` we need
# to keep both versions for compatibility with the Stylus SDK. Once they start
# using `alloy` we can remove these.
alloy-primitives = { version = "=0.8.14", default-features = false }
alloy-sol-types = { version = "=0.8.14", default-features = false }
alloy-sol-macro = { version = "=0.8.14", default-features = false }
alloy-sol-macro-expander = { version = "=0.8.14", default-features = false }
alloy-sol-macro-input = { version = "=0.8.14", default-features = false }

eyre = "0.6.8"
keccak-const = "0.2.0"
koba = "0.3.0"
once_cell = "1.19.0"
rand = "0.8.5"
regex = "1.10.4"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
tokio = { version = "1.12.0", features = ["full"] }
futures = "0.3.30"
num-traits = "0.2.14"
zeroize = { version = "1.8.1", features = ["derive"] }
proptest = "1"
educe = "0.6.0"
hex-literal = "0.4.1"

# procedural macros
syn = { version = "2.0.58", features = ["full"] }
proc-macro2 = "1.0.79"
quote = "1.0.35"

# test helpers
motsu = "0.3.0"

# members
openzeppelin-stylus = { path = "contracts" }
openzeppelin-stylus-proc = { path = "contracts-proc", version = "0.1.0" }
openzeppelin-crypto = { path = "lib/crypto" }
e2e = { path = "lib/e2e" }
e2e-proc = { path = "lib/e2e-proc" }

[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
lto = true
debug = false
rpath = false
debug-assertions = false
incremental = false

[profile.dev]
panic = "abort"

[workspace.metadata.typos]
default = { extend-ignore-identifiers-re = [
  # ignore hex data samples.
  "[0-9a-fA-F][0-9a-fA-F]",
] }
files = { extend-exclude = [] }
