[workspace]
members = [
  "benches",
  "contracts",
  "contracts-proc",
  "lib/crypto",
  "lib/e2e",
  "lib/e2e-proc",
  "examples/access-control",
  "examples/precompiles",
  "examples/erc1967",
  "examples/erc1967-invalid",
  "examples/erc20",
  "examples/erc20-permit",
  "examples/erc20-flash-mint",
  "examples/erc20-wrapper",
  "examples/erc721",
  "examples/erc721-consecutive",
  "examples/erc721-metadata",
  "examples/erc721-wrapper",
  "examples/erc1155",
  "examples/erc1155-metadata-uri",
  "examples/erc1155-supply",
  "examples/erc4626",
  "examples/erc6909",
  "examples/erc6909-supply",
  "examples/safe-erc20",
  "examples/merkle-proofs",
  "examples/ownable",
  "examples/vesting-wallet",
  "examples/ownable-two-step",
  "examples/poseidon",
  "examples/proxy",
  "examples/pedersen",
  "examples/basic/token",
  "examples/basic/script",
  "examples/upgradeable-beacon",
  "examples/beacon-proxy",
  "examples/uups-proxy",
  "examples/uups-proxy-new-version",
  "examples/erc721-holder",
  "examples/erc1155-holder",
  "examples/eddsa",
]

default-members = [
  "contracts",
  "contracts-proc",
  "lib/crypto",
  "lib/e2e-proc",
  "examples/access-control",
  "examples/precompiles",
  "examples/erc1967",
  "examples/erc1967-invalid",
  "examples/erc20",
  "examples/erc20-permit",
  "examples/erc20-flash-mint",
  "examples/erc20-wrapper",
  "examples/erc721",
  "examples/erc721-consecutive",
  "examples/erc721-metadata",
  "examples/erc721-wrapper",
  "examples/erc1155",
  "examples/erc1155-metadata-uri",
  "examples/erc1155-supply",
  "examples/erc4626",
  "examples/erc6909",
  "examples/erc6909-supply",
  "examples/safe-erc20",
  "examples/merkle-proofs",
  "examples/ownable",
  "examples/vesting-wallet",
  "examples/ownable-two-step",
  "examples/poseidon",
  "examples/proxy",
  "examples/pedersen",
  "examples/basic/token",
  "examples/upgradeable-beacon",
  "examples/beacon-proxy",
  "examples/uups-proxy",
  "examples/uups-proxy-new-version",
  "examples/erc721-holder",
  "examples/erc1155-holder",
  "examples/eddsa",
]
exclude = ["fuzz", "templates/crypto-erc20"]

# Explicitly set the resolver to version 2, which is the default for packages
# with edition >= 2021.
# https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html
resolver = "2"

[workspace.package]
authors = ["OpenZeppelin"]
edition = "2021"
license = "MIT"
repository = "https://github.com/OpenZeppelin/rust-contracts-stylus"
version = "0.3.0"

[workspace.lints.rust]
missing_docs = "warn"
unreachable_pub = "warn"
rust_2021_compatibility = { level = "warn", priority = -1 }
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[workspace.lints.clippy]
pedantic = "warn"
all = "warn"

[workspace.dependencies]
# Stylus SDK related
stylus-sdk = "=0.9.0"

alloy = { version = "=0.7.3", features = [
  "contract",
  "network",
  "providers",
  "provider-http",
  "rpc-client",
  "json-rpc",
  "rpc-types-eth",
  "signer-local",
  "getrandom",
] }
# Even though `alloy` includes `alloy-primitives` and `alloy-sol-types` we need
# to keep both versions for compatibility with the Stylus SDK. Once they start
# using `alloy` we can remove these.
alloy-primitives = { version = "=0.8.20", default-features = false, features = [
  "tiny-keccak",
] }
alloy-sol-types = { version = "=0.8.20", default-features = false }
alloy-sol-macro = { version = "=0.8.20", default-features = false }
alloy-sol-macro-expander = { version = "=0.8.20", default-features = false }
alloy-sol-macro-input = { version = "=0.8.20", default-features = false }
alloy-signer = { version = "=0.11.1", default-features = false }

ruint = "^1.12.3"

eyre = "0.6.8"
keccak-const = "0.2.0"
rand = "0.9.0"
regex = "1.10.4"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
tokio = { version = "1.12.0", features = ["full"] }
futures = "0.3.30"
num-traits = "0.2.14"
zeroize = { version = "1.8.1", features = ["derive"] }
proptest = "1"
educe = "0.6.0"
hex-literal = "1.0.0"
sha2 = "0.10.9"
static_assertions = "1.1.0"

# procedural macros
syn = { version = "2.0.58", features = ["full"] }
proc-macro2 = "1.0.79"
quote = "1.0.35"

motsu = "=0.10.0"

# members
openzeppelin-stylus = { path = "contracts" }
openzeppelin-stylus-proc = { path = "contracts-proc", version = "=0.3.0" }
openzeppelin-crypto = { path = "lib/crypto" }
e2e = { path = "lib/e2e" }
e2e-proc = { path = "lib/e2e-proc" }

[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
lto = true
debug = false
rpath = false
debug-assertions = false
incremental = false

[profile.dev]
panic = "abort"

[workspace.metadata.typos]
default = { extend-ignore-identifiers-re = [
  # ignore hex data samples.
  "[0-9a-fA-F][0-9a-fA-F]",
] }
files = { extend-exclude = [] }
