[package]
name = "benches"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version.workspace = true

[dependencies]
openzeppelin-crypto = { workspace = true, features = ["ruint"] }
alloy-primitives = { workspace = true, features = ["tiny-keccak"] }
alloy.workspace = true
stylus-sdk.workspace = true
tokio.workspace = true
futures.workspace = true
eyre.workspace = true
e2e.workspace = true
serde = "1.0.203"
keccak-const = "0.2.0"
itertools = "0.14.0"
ruint.workspace = true
