[package]
name = "openzeppelin-stylus-proc"
description = "Procedural macros for OpenZeppelin Stylus contracts"
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
version = "0.1.0"


[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
convert_case = "0.6.0"

[lints]
workspace = true

[lib]
proc-macro = true
