[package]
name = "openzeppelin-stylus"
description = "OpenZeppelin Contracts for Stylus"
edition.workspace = true
categories = ["cryptography::cryptocurrencies", "no-std", "wasm"]
keywords = ["arbitrum", "ethereum", "stylus", "smart-contracts", "standards"]
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-sol-macro.workspace = true
alloy-sol-macro-expander.workspace = true
alloy-sol-macro-input.workspace = true
stylus-sdk.workspace = true
keccak-const.workspace = true
openzeppelin-stylus-proc.workspace = true

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["arbitrary"] }
motsu.workspace = true
rand.workspace = true

[features]
# Enables using the standard library. This is not included in the default
# features, because this crate is meant to be used in a `no_std` environment.
# Currently, the std feature is only used for testing purposes.
std = []

[lib]
crate-type = ["lib"]

[lints]
workspace = true
