[package]
name = "e2e-tests"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
cfg-if = "1.0.0"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"
async-trait = "0.1.80"

[features]
std = []

[lib]
doctest = false