[package]
name = "e2e-tests"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
eyre = "0.6.8"
async-trait = "0.1.80"
koba = { git = "https://github.com/alexfertel/koba", rev = "5ff9d61" }
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "c6c91cc", features = [
  "contract",
  "network",
  "providers",
  "provider-http",
  "rpc-client",
  "rpc-types-eth",
  "signers",
  "signer-wallet",
  "getrandom",
] }

[lib]
doctest = false
