[package]
name = "erc20-proc"
description = "Macros for writing ERC20 tokens in Rust and Stylus"
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version = "0.1.0"

[dependencies]
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = { version = "2.0.58", features = ["full"] }

[lib]
proc-macro = true
