[package]
name = "test-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.9"
stylus-sdk = { version = "0.8.3", default-features = false, features = [
    "mini-alloc",
] }
rs_merkle = { version = "1.5.0", features = ["keccak256"] }
alloy-primitives = { version = "=0.8.20", default-features = false }

[dependencies.openzeppelin-crypto]
path = "../lib/crypto"

[[bin]]
name = "merkle"
path = "fuzz_targets/merkle.rs"
test = false
doc = false
bench = false

[[bin]]
name = "keccak"
path = "fuzz_targets/keccak.rs"
test = false
doc = false
bench = false
