[package]
name = "test-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
motsu = "0.7.0"
stylus-sdk = { version = "=0.8.4", default-features = false, features = [
    "mini-alloc",
] }
alloy-primitives = { version = "=0.8.20", default-features = false }

[features]
arbitrary = ["alloy-primitives/arbitrary"]

[dependencies.openzeppelin-crypto]
path = "../lib/crypto"

[dependencies.openzeppelin-stylus]
path = "../contracts"

[[bin]]
name = "merkle_verify"
path = "fuzz_targets/merkle_verify.rs"
test = false
doc = false
bench = false

[[bin]]
name = "keccak_does_not_panic"
path = "fuzz_targets/keccak/does_not_panic.rs"
test = false
doc = false
bench = false

[[bin]]
name = "keccak_memory_safety"
path = "fuzz_targets/keccak/memory_safety.rs"
test = false
doc = false
bench = false

[[bin]]
name = "openzeppelin_stylus_utils"
path = "fuzz_targets/openzeppelin_stylus_utils.rs"
test = false
doc = false
bench = false
