[package]
name = "test-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.9"
stylus-sdk = "=0.9.0"
alloy-primitives = { version = "=0.8.20", default-features = false }

[dependencies.openzeppelin-crypto]
path = "../lib/crypto"

# fuzz targets

[[bin]]
name = "merkle"
path = "fuzz_targets/merkle.rs"
test = false
doc = false
bench = false

[[bin]]
name = "keccak"
path = "fuzz_targets/keccak.rs"
test = false
doc = false
bench = false

# corpus generators

# name must be in format 'gen-{{fuzz-target}}-corpus
[[bin]]
name = "gen-merkle-corpus"
path = "src/merkle/corpus.rs"
test = false
doc = false
bench = false
