[package]
name = "access-control-example"
version = "0.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/OpenZeppelin/rust-contracts-stylus"
publish = false

[dependencies]
openzeppelin-stylus = { path = "../../contracts" }
alloy-primitives = { version = "=0.8.20", default-features = false, features = [
    "tiny-keccak",
] }
stylus-sdk = { git = "https://github.com/OffchainLabs/stylus-sdk-rs.git", rev = "b7310ef", default-features = false, features = [
    "mini-alloc",
] }
keccak-const = "0.2.0"

[dev-dependencies]
alloy = { version = "=0.7.3", features = ["contract"] }
tokio = { version = "1.12.0", features = ["full"] }
eyre = "0.6.8"
e2e = { path = "../../lib/e2e" }

[[bin]]
name = "access-control-example"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"

opt-level = 3

[features]
# If you need to reduce the binary size, it is advisable to try other
# optimization levels, such as "s" and "z"
e2e = []
export-abi = ["stylus-sdk/export-abi", "openzeppelin-stylus/export-abi"]
