[package]
name = "access-control-example"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version.workspace = true

[dependencies]
openzeppelin-stylus.workspace = true
alloy-primitives.workspace = true
stylus-sdk.workspace = true
keccak-const.workspace = true

[dev-dependencies]
alloy.workspace = true
e2e.workspace = true
tokio.workspace = true
eyre.workspace = true
alloy-primitives = { workspace = true, features = ["tiny-keccak"] }

[lib]
crate-type = ["lib", "cdylib"]

[features]
e2e = []
export-abi = ["openzeppelin-stylus/export-abi"]
contract-client-gen = ["openzeppelin-stylus/contract-client-gen"]

[[bin]]
name = "access-control-example"
path = "src/main.rs"
