[package]
name = "cryptography-example"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version = "0.0.0"

[dependencies]
crypto = { path = "../../lib/crypto" }
alloy-primitives.workspace = true
stylus-sdk.workspace = true
stylus-proc.workspace = true
mini-alloc.workspace = true

[dev-dependencies]
alloy.workspace = true
e2e = { path = "../../lib/e2e" }
tokio.workspace = true
eyre.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

[features]
e2e = []
