[package]
name = "erc1155-supply-example"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version.workspace = true

[dependencies]
openzeppelin-stylus.workspace = true
alloy-primitives.workspace = true
stylus-sdk.workspace = true

[dev-dependencies]
alloy.workspace = true
eyre.workspace = true
tokio.workspace = true
e2e.workspace = true
alloy-primitives = { workspace = true, features = ["tiny-keccak"] }

[features]
e2e = []
export-abi = ["openzeppelin-stylus/export-abi"]
contract-client-gen = ["openzeppelin-stylus/contract-client-gen"]

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "erc1155-supply-example"
path = "src/main.rs"
