[package]
name = "erc1155-example"
version = "0.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true

[dependencies]
openzeppelin-stylus = { path = "../../contracts" }

[dev-dependencies]
e2e = { path = "../../lib/e2e" }

[lints]
workspace = true
