[package]
name = "erc1363-example"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
mini-alloc.workspace = true
openzeppelin-stylus.workspace = true
stylus-sdk.workspace = true

[dev-dependencies]
tokio.workspace = true

[features]
export-abi = ["stylus-sdk/export-abi"]

[[bin]]
name = "erc1363_example"
path = "src/main.rs"

[lib]
crate-type = ["lib", "cdylib"]
