[package]
name = "erc20-burnable-example"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version = "0.0.0"

[dependencies]
contracts = { path = "../../contracts", features = ["erc20"] }
alloy-primitives.workspace = true
stylus-sdk.workspace = true
stylus-proc.workspace = true
mini-alloc.workspace = true

[lib]
crate-type = ["lib", "cdylib"]
