[package]
name = "erc20-flash-mint-example"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version.workspace = true

[dependencies]
openzeppelin-stylus = { workspace = true, features = ["reentrant"] }
alloy-primitives.workspace = true
stylus-sdk.workspace = true

[dev-dependencies]
alloy.workspace = true
eyre.workspace = true
tokio.workspace = true
e2e.workspace = true
openzeppelin-stylus = { workspace = true, features = ["stylus-test"] }

[features]
e2e = []
export-abi = ["openzeppelin-stylus/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "erc20-flash-mint-example"
path = "src/main.rs"
