[package]
name = "erc20-wrapper-example"
edition = "2021"
license = "MIT"
repository = "https://github.com/OpenZeppelin/rust-contracts-stylus"
publish = false
version = "0.0.0"

[dependencies]
openzeppelin-stylus = { path = "../../contracts" }
alloy-primitives = { version = "=0.8.20", default-features = false, features = [
    "tiny-keccak",
] }
stylus-sdk = { git = "https://github.com/OffchainLabs/stylus-sdk-rs.git", rev = "76d0454defed46b2cfaab82e566aeb8ddde5944a", default-features = false, features = [
    "mini-alloc",
] }

[dev-dependencies]
alloy = { version = "=0.7.3", features = ["contract"] }
eyre = "0.6.8"
tokio = { version = "1.12.0", features = ["full"] }
e2e = { path = "../../lib/e2e" }

[[bin]]
name = "erc20-wrapper-example"
path = "src/main.rs"

[features]
e2e = []
export-abi = ["stylus-sdk/export-abi", "openzeppelin-stylus/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"

opt-level = 3
