[package]
name = "erc20-example"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version = "0.0.0"

[dependencies]
openzeppelin-stylus = { path = "../../contracts" }
alloy-primitives.workspace = true
stylus-sdk.workspace = true
stylus-proc.workspace = true
mini-alloc.workspace = true

[dev-dependencies]
alloy.workspace = true
e2e = { path = "../../lib/e2e" }
tokio = { version = "1.12.0", features = ["full"] }
eyre = "0.6.8"

[features]
default = []
e2e = []

[lib]
crate-type = ["lib", "cdylib"]
