[package]
name = "erc20-example"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false
version = "0.0.0"

[dependencies]
openzeppelin-stylus = { path = "../../contracts", features = [
  "erc20_burnable",
  "erc20_capped",
  "erc20_metadata",
  "erc20_pausable",
] }
alloy-primitives.workspace = true
stylus-sdk.workspace = true
stylus-proc.workspace = true
mini-alloc.workspace = true

[dev-dependencies]
alloy.workspace = true
e2e = { path = "../../lib/e2e" }
tokio.workspace = true
eyre.workspace = true

[features]
default = []
e2e = []

[lib]
crate-type = ["lib", "cdylib"]

