[package]
name = "erc721-metadata-example"
edition = "2021"
license = "MIT"
repository = "https://github.com/OpenZeppelin/rust-contracts-stylus"
publish = false
version = "0.0.0"

[dependencies]
openzeppelin-stylus = { path = "../../contracts" }
alloy-primitives = { version = "=0.8.20", default-features = false, features = [
    "tiny-keccak",
] }
stylus-sdk = { git = "https://github.com/0xNeshi/stylus-sdk-rs.git", rev = "8fe26c6", default-features = false, features = [
    "mini-alloc",
] }

[dev-dependencies]
alloy = { version = "=0.7.3", features = ["contract"] }
e2e = { path = "../../lib/e2e" }
tokio = { version = "1.12.0", features = ["full"] }
eyre = "0.6.8"
rand = "0.9.0"

[features]
e2e = []
export-abi = ["stylus-sdk/export-abi", "openzeppelin-stylus/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "erc721-metadata-example"
path = "src/main.rs"

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"

opt-level = 3
